--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
             margin: 0;
             min-height: 100vh;
             min-height: 100vw;
-            overflow: hidden;
+            /* overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center; */
         }
+        
     </style>
 </head>
 <body>
